# models/attendee_ref.go
@@ -1,0 +1,20 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+)
+
+// AttendeeRef attendee ref
+//
+// swagger:model AttendeeRef
+type AttendeeRef string
+
+// Validate validates this attendee ref
+func (m AttendeeRef) Validate(formats strfmt.Registry) error {
+	return nil
+}
