# restapi/handlers/talks.go
@@ -12,6 +12,7 @@ func AttachTalksHandlers(api *operations.AttendIoAPI) {
 	api.TalksGetTalkByIDHandler = talks.GetTalkByIDHandlerFunc(GetTalkById)
 	api.TalksGetTalkAttendeesHandler = talks.GetTalkAttendeesHandlerFunc(GetTalkAttendees)
 	api.TalksPostTalksHandler = talks.PostTalksHandlerFunc(CreateTalk)
+	api.TalksAddAttendeeToTalkHandler = talks.AddAttendeeToTalkHandlerFunc(AddAttendeeToTalk)
 }
 
 func GetTalks(params talks.GetTalksParams) middleware.Responder {
@@ -19,13 +20,43 @@ func GetTalks(params talks.GetTalksParams) middleware.Responder {
 }
 
 func GetTalkById(params talks.GetTalkByIDParams) middleware.Responder {
-	return talks.NewGetTalkByIDOK().WithPayload(services.Talks().GetById(params.ID))
+	result, err := services.Talks().GetById(params.ID)
+
+	if err != nil {
+		return talks.NewGetTalkByIDDefault(500)
+	}
+
+	return talks.NewGetTalkByIDOK().WithPayload(result)
 }
 
 func GetTalkAttendees(params talks.GetTalkAttendeesParams) middleware.Responder {
-	return talks.NewGetTalkAttendeesOK().WithPayload(services.Talks().GetAttendees(params.ID))
+	result, err := services.Talks().GetAttendees(params.ID)
+
+	if err != nil {
+		return talks.NewGetTalkByIDDefault(500)
+	}
+
+	return talks.NewGetTalkAttendeesOK().WithPayload(result)
 }
 
 func CreateTalk(params talks.PostTalksParams) middleware.Responder {
-	return talks.NewPostTalksOK().WithPayload(services.Talks().Create(params.Talk))
+
+	result, err := services.Talks().Create(params.Talk)
+
+	if err != nil {
+		return talks.NewGetTalkByIDDefault(500)
+	}
+
+	return talks.NewPostTalksOK().WithPayload(result)
+}
+
+func AddAttendeeToTalk(params talks.AddAttendeeToTalkParams) middleware.Responder {
+
+	result, err := services.Talks().AddAttendee(params.ID, params.Attendees)
+
+	if err != nil {
+		return talks.NewGetTalkByIDDefault(500)
+	}
+
+	return talks.NewPostTalksOK().WithPayload(result)
 }
